// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Confirmation Popup Default 1`] = `
<State
  store={
    Store {
      "callbacks": Array [
        Object {
          "callback": [Function],
          "subscription": "b883404c-5e03-4ab5-b7b4-1d8f1821f9e7",
        },
      ],
      "state": Object {
        "show": false,
      },
    }
  }
>
  <ConfirmationPopup
    cancelButton={
      Object {
        "label": "No, resume my process please",
        "onClick": [Function],
        "styling": "normal-white btn consistent-width",
      }
    }
    confirmButton={
      Object {
        "label": "Yes, cancel my process please",
        "onClick": [Function],
        "styling": "normal-blue btn consistent-width",
      }
    }
    key="popup"
    mainButton={
      Object {
        "label": "Click Me",
        "onClick": [Function],
        "styling": "normal-white btn",
      }
    }
    modal={
      Object {
        "body": [Function],
        "show": false,
        "title": "Cancel process?",
      }
    }
  >
    <Button
      disabled={false}
      label="Click Me"
      onClick={[Function]}
      styling="normal-white btn"
    >
      <div>
        <button
          className="normal-white btn"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Click Me
        </button>
      </div>
    </Button>
    <Bootstrap(Modal)
      onHide={[Function]}
      show={false}
    >
      <Modal
        animation={true}
        autoFocus={true}
        backdrop={true}
        bsPrefix="modal"
        dialogAs={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ModalDialog",
            "render": [Function],
          }
        }
        enforceFocus={true}
        keyboard={true}
        onHide={[Function]}
        restoreFocus={true}
        show={false}
      >
        <Modal
          autoFocus={true}
          backdrop={true}
          backdropTransition={[Function]}
          className="modal"
          containerClassName="modal-open"
          enforceFocus={true}
          keyboard={true}
          manager={
            BootstrapModalManager {
              "adjustAndStore": [Function],
              "containers": Array [],
              "data": Array [],
              "handleContainerOverflow": true,
              "hideSiblingNodes": true,
              "modals": Array [],
              "restore": [Function],
              "scrollbarSize": 0,
            }
          }
          onClick={[Function]}
          onEnter={[Function]}
          onEntering={[Function]}
          onExited={[Function]}
          onHide={[Function]}
          onMouseUp={[Function]}
          renderBackdrop={[Function]}
          restoreFocus={true}
          show={false}
          style={Object {}}
          transition={[Function]}
        />
      </Modal>
    </Bootstrap(Modal)>
  </ConfirmationPopup>
</State>
`;

exports[`Storyshots Confirmation Popup Mobile 1`] = `
<State
  store={
    Store {
      "callbacks": Array [
        Object {
          "callback": [Function],
          "subscription": "b883404c-5e03-4ab5-b7b4-1d8f1821f9e7",
        },
        Object {
          "callback": [Function],
          "subscription": "71a88f05-1e5f-4478-b287-d303fc7d195c",
        },
      ],
      "state": Object {
        "show": false,
      },
    }
  }
>
  <ConfirmationPopup
    cancelButton={
      Object {
        "label": "No, resume my process please",
        "onClick": [Function],
        "styling": "normal-white btn consistent-width",
      }
    }
    confirmButton={
      Object {
        "label": "Yes, cancel my process please",
        "onClick": [Function],
        "styling": "normal-blue btn consistent-width",
      }
    }
    key="popup"
    mainButton={
      Object {
        "label": "Click Me",
        "onClick": [Function],
        "styling": "normal-white btn",
      }
    }
    modal={
      Object {
        "body": [Function],
        "show": false,
        "title": "Cancel process?",
      }
    }
  >
    <Button
      disabled={false}
      label="Click Me"
      onClick={[Function]}
      styling="normal-white btn"
    >
      <div>
        <button
          className="normal-white btn"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Click Me
        </button>
      </div>
    </Button>
    <Bootstrap(Modal)
      onHide={[Function]}
      show={false}
    >
      <Modal
        animation={true}
        autoFocus={true}
        backdrop={true}
        bsPrefix="modal"
        dialogAs={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ModalDialog",
            "render": [Function],
          }
        }
        enforceFocus={true}
        keyboard={true}
        onHide={[Function]}
        restoreFocus={true}
        show={false}
      >
        <Modal
          autoFocus={true}
          backdrop={true}
          backdropTransition={[Function]}
          className="modal"
          containerClassName="modal-open"
          enforceFocus={true}
          keyboard={true}
          manager={
            BootstrapModalManager {
              "adjustAndStore": [Function],
              "containers": Array [],
              "data": Array [],
              "handleContainerOverflow": true,
              "hideSiblingNodes": true,
              "modals": Array [],
              "restore": [Function],
              "scrollbarSize": 0,
            }
          }
          onClick={[Function]}
          onEnter={[Function]}
          onEntering={[Function]}
          onExited={[Function]}
          onHide={[Function]}
          onMouseUp={[Function]}
          renderBackdrop={[Function]}
          restoreFocus={true}
          show={false}
          style={Object {}}
          transition={[Function]}
        />
      </Modal>
    </Bootstrap(Modal)>
  </ConfirmationPopup>
</State>
`;
